<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tVhpo"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:background="@drawable/black"
            android:text="@string/Amp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tVans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tVhpo"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:background="@drawable/black"
            android:text="@string/Pow"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tVansw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/ETv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/roundedrect"
        android:hint="@string/Volts"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/ETr"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundedrect"
        android:layout_weight="1"
        android:hint="@string/ohm"
        android:inputType="number|numberDecimal" />

    <Button
        android:id="@+id/bent"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/ent" />

</LinearLayout>